--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "turreta-alerts-backend"
+name = "backend"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.4.11"
+rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
 diesel = { version = "2.0.0", features = ["postgres"] }
 dotenvy = "0.15"
