--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
+actix-web = "4.3.1"
 diesel = { version = "2.0.0", features = ["postgres"] }
 dotenvy = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+#turreta-rust-keycloak = { version = "0.1.0", path = "/home/karl/Documents/__dev/turreta-opensource/turreta-rust-keycloak" }
+#async-trait = "0.1.68"
