--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,5 +8,7 @@ actix-web = "4.3.1"
 diesel = { version = "2.0.0", features = ["postgres"] }
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
-#turreta-rust-keycloak = { version = "0.1.0", path = "/home/karl/Documents/__dev/turreta-opensource/turreta-rust-keycloak" }
+futures-util = "0.3.28"
+actix-session = { version = "0.7.2", features = ["cookie-session"] }
+turreta-rust-keycloak = { version = "1.0.0", git = "https://github.com/turretadotcom/turreta-rust-keycloak", branch="master" }
 #async-trait = "0.1.68"
