--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,10 +5,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
-diesel = { version = "2.0.0", features = ["postgres"] }
+diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 futures-util = "0.3.28"
 actix-session = { version = "0.7.2", features = ["cookie-session"] }
 turreta-rust-keycloak = { version = "1.0.0", git = "https://github.com/turretadotcom/turreta-rust-keycloak", branch="master" }
-#async-trait = "0.1.68"
