--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,4 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 futures-util = "0.3.28"
 actix-session = { version = "0.7.2", features = ["cookie-session"] }
 turreta-rust-keycloak = { version = "1.0.0", git = "https://github.com/turretadotcom/turreta-rust-keycloak", branch="master" }
+actix-web-middleware-keycloak-auth = "0.4.0"
 chrono = { version = "0.4.24", features = ["serde"] }
+reqwest = { version = "0.11.17", features = ["json"] }
+env_logger = "0.10.0"
