--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,3 +16,4 @@ actix-web-middleware-keycloak-auth = "0.4.0"
 chrono = { version = "0.4.24", features = ["serde"] }
 reqwest = { version = "0.11.17", features = ["json"] }
 env_logger = "0.10.0"
+actix-cors = "0.6.4"
