--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,3 +17,5 @@ chrono = { version = "0.4.24", features = ["serde"] }
 reqwest = { version = "0.11.17", features = ["json"] }
 env_logger = "0.10.0"
 actix-cors = "0.6.4"
+actix-web-validator = "5.0.1"
+validator = { version = "0.16.0", features = ["derive"] }
